# AOWIS-SERVER-EPANET

./: .gitmodules  CMakeLists.txt  README.md  compile_linux.sh  enbJ5Hys  git_submodule_push_url_git.sh
experiments/: epanet_minimal.inp  epanet_minimal.out  epanet_minimal.rpt
src/lib/: CMakeLists.txt  _enums_structs.h  epanet_error.cpp  epanet_error.h  epanet_resolvers.cpp  epanet_resolvers.h  epanet_simulation_manager.cpp  epanet_simulation_manager.h  epanet_wrapper.cpp  epanet_wrapper.h  epanet_wrapper_add.cpp  epanet_wrapper_hydraulics.cpp  epanet_wrapper_read.cpp
src/lib/dummies/: dummy_networks.cpp  dummy_networks.h
src/lib/dummy/: dummy_networks.cpp  dummy_networks.h
src/lib/model/: epanet_status.h  simulation_request.h  simulation_result.h
src/lib/utility/: epanet_status_printer.cpp  epanet_status_printer.h  simulation_result_printer.cpp  simulation_result_printer.h  simulation_status_printer.cpp  simulation_status_printer.h  status_printer.cpp  status_printer.h
src/server/: CMakeLists.txt  server.cpp  server.h
